--- a/BackEnd/TaskManagement/pom.xml
+++ b/BackEnd/TaskManagement/pom.xml
@@ -15,7 +15,10 @@
 	<description>Demo project for Spring Boot</description>
 	
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -24,13 +27,13 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-actuator</artifactId>
     <version>2.1.3.RELEASE</version>
-</dependency>
+</dependency><!--$NO-MVN-MAN-VER$-->
 	
 	<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.27</version>
-		</dependency>
+		</dependency><!--$NO-MVN-MAN-VER$-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -39,7 +42,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.8</version>
-			<scope>provided</scope>
+			<scope>provided</scope><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,7 +57,7 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-data-jpa</artifactId>
 		    <version>2.1.6.RELEASE</version>
-		</dependency>
+		</dependency><!--$NO-MVN-MAN-VER$-->
 			
 	</dependencies>
 
