--- a/BackEnd/TaskManagement/pom.xml
+++ b/BackEnd/TaskManagement/pom.xml
@@ -26,14 +26,14 @@
 <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-actuator</artifactId>
-    <version>2.1.3.RELEASE</version>
-</dependency><!--$NO-MVN-MAN-VER$-->
+    <version>2.1.3.RELEASE</version><!--$NO-MVN-MAN-VER$-->
+</dependency>
 	
 	<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.27</version>
-		</dependency><!--$NO-MVN-MAN-VER$-->
+			<version>5.1.27</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -41,8 +41,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.8</version>
-			<scope>provided</scope><!--$NO-MVN-MAN-VER$-->
+			<version>1.18.8</version><!--$NO-MVN-MAN-VER$-->
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -56,8 +56,8 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-data-jpa</artifactId>
-		    <version>2.1.6.RELEASE</version>
-		</dependency><!--$NO-MVN-MAN-VER$-->
+		    <version>2.1.6.RELEASE</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
 			
 	</dependencies>
 
