Task Managemennt project pom updated

--- a/BackEnd/TaskManagement/pom.xml
+++ b/BackEnd/TaskManagement/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>lms</artifactId>
+	<artifactId>TaskManagement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>lms</name>
+	<name>TaskManagement</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
