--- a/BackEnd/TaskManagement/pom.xml
+++ b/BackEnd/TaskManagement/pom.xml
@@ -30,6 +30,10 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>2.1.3.RELEASE</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
+		  <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
