--- a/BackEnd/TaskManagement/pom.xml
+++ b/BackEnd/TaskManagement/pom.xml
@@ -30,15 +30,13 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>2.1.3.RELEASE</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
-		  <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-    </dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.27</version><!--$NO-MVN-MAN-VER$ -->
-		</dependency>
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.27</version>
+</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
