--- a/BackEnd/TaskManagement/src/main/resources/application.properties
+++ b/BackEnd/TaskManagement/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Task_Management?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/Task_Management_Db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
