--- a/EmailServiceandSMSService/EmailService/pom.xml
+++ b/EmailServiceandSMSService/EmailService/pom.xml
@@ -38,6 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
